<resources>
    <string name="app_name">Taller 2</string>
    <string name="TituloApp">LuminuxApp</string>
    <string name="mensaje_inicio">Inicia una nueva aventura con \nLuminuxApp y descubre una \nnueva forma de ver el mundo.</string>
    <string name="mensajelogin">La aventura está por iniciar,\nPor favor inicia sesión</string>
    <string name="Nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresa_con_google">Ingresar Con Google</string>
    <string name="reg_strate">Regístrate</string>
    <string name="Texto_Ingresar">Ingresar</string>
    <string name="recupera_contrasena">Recupera tu Contraseña</string>
    <string name="bienvenido_al_formulario_de_registro">Bienvenido Al Formulario De Registro</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n_aqu">¿Ya tienes una cuenta? Inicia Sesión Aquí</string>
    <string name="registrate">Regístrate</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="My_Name">David Cardona</string>
    <string name="comienza_buttom">Comienza</string>
    <string name="Apellidos">Apellidos</string>
    <string name="confirmar_correo_electr_nico">Confirmar Correo Electrónico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="cat_logo">Catálogo</string>

    <!-- Recursos necesarios para el Drawer de MainActivity -->
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="apellidos">Apellidos</string>
    <string name="aceptar_t_rminos_y_condiciones">Aceptar Términos Y Condiciones</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen Del Producto</string>
    <string name="agregar_al_carrito">Agregar Al Carrito</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="perfil_de_usuario">Perfil De Usuario</string>
    <string name="ingresar_con_huella">Ingresar Con Huella</string>
</resources>
