<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_primary"
    android:orientation="vertical"
    tools:context=".ui.main.perfil.EditPerfilFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="45dp">


        <ImageView
            android:id="@+id/id_logo_edit_perfil"
            android:layout_width="132dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/logo24" />

        <TextView
            android:id="@+id/id_nombre_app_edit_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/TituloApp"
            android:textAlignment="center"
            android:textColor="@color/ClorBasic"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/id_mensaje_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/editar_perfil"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/id_nombre_usuario_perfil"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/Nombre"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_apellidos_usuario_perfil"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/apellidos"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />


                <EditText
                    android:id="@+id/id_correo_usuario_perfil"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_contraseña_usuario_perfil"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/contrase_a"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_conf_contraseña_usuario_perfil"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/confirmar_contrase_a"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="25dp">


                <Button
                    android:id="@+id/id_boton_guardar"
                    android:layout_width="291dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_border"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:orientation='vertical'
                    android:text="@string/guardar_cambios"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>