<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="60dp">

        <ImageView
            android:id="@+id/id_logo_login"
            android:layout_width="132dp"
            android:layout_height="144dp"
            android:layout_marginStart="12dp"
            app:srcCompat="@drawable/logo24" />

        <TextView
            android:id="@+id/id_nombre_app_login"
            android:layout_width="262dp"
            android:layout_height="61dp"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/TituloApp"
            android:textAlignment="center"
            android:textColor="@color/ClorBasic"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/id_mensaje_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/mensajelogin"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_iconos_login"
            android:layout_width="84dp"
            android:layout_height="149dp"
            app:srcCompat="@drawable/iconoslogin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/id_nombre_usuario_login"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/style_edit_text"
                android:ems="10"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:hint="@string/Nombre"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/contraseña_usuario_login"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:background="@drawable/style_edit_text"
                android:ems="10"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:hint="@string/contrase_a"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/id_boton_ingresar"
            android:layout_width="291dp"
            android:layout_height="68dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/Texto_Ingresar"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/id_recupera_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/recupera_contrasena"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/google_button"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/google"
                android:layout_width="62dp"
                android:layout_height="59dp"
                app:srcCompat="@drawable/logogoogle" />

            <Button
                android:id="@+id/IngresoGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:text="@string/ingresa_con_google"
                android:textSize="28sp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                app:backgroundTint="@null"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ir_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true">


        <TextView
            android:id="@+id/id_no_tienes_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="No tienes cuenta?"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_registrate_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:paddingLeft="10dp"
            android:text="@string/reg_strate"
            android:textColor="#00BCD4"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>

