<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_primary"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="45dp">


        <ImageView
            android:id="@+id/id_logo_registro"
            android:layout_width="132dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/logo24" />

        <TextView
            android:id="@+id/id_nombre_app_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/TituloApp"
            android:textAlignment="center"
            android:textColor="@color/ClorBasic"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/id_mensaje_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/bienvenido_al_formulario_de_registro"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/id_nombre_usuario_registro"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/Nombre"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_apellidos_usuario_registro"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/apellidos"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />


                <EditText
                    android:id="@+id/id_correo_usuario_registro"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_contraseña_usuario_registro"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/contrase_a"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/id_conf_contraseña_usuario_registro"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@drawable/style_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:hint="@string/confirmar_contrase_a"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <TextView
                    android:id="@+id/id_txtTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:text="@string/aceptar_t_rminos_y_condiciones"
                    android:textColor="@color/White"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="25dp">


                <Button
                    android:id="@+id/id_boton_registrarse"
                    android:layout_width="291dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_border"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:orientation='vertical'
                    android:text="Registrarse"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <TextView
                    android:id="@+id/id_ir_a_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:text="@string/ya_tienes_una_cuenta_inicia_sesi_n_aqu"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/google_button"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="62dp"
                        android:layout_height="59dp"
                        app:srcCompat="@drawable/logogoogle" />

                    <Button
                        android:id="@+id/IngresoGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/tiro_devanagari_hindi"
                        android:text="@string/ingresa_con_google"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        app:backgroundTint="@null" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>


