<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/Background_primary"
    tools:context=".Activities.InicioActivity">

    <ImageView
        android:id="@+id/id_logo_inicio"
        android:layout_width="257dp"
        android:layout_height="265dp"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/logo24" />


    <TextView
        android:id="@+id/id_nombre_app_inicio"
        android:layout_width="262dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/TituloApp"
        android:textAlignment="center"
        android:textColor="@color/ClorBasic"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id_mensaje_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/mensaje_inicio"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/id_boton_comienza_inicio"
        android:layout_width="291dp"
        android:layout_height="68dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="Comienza"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@null"/>

    <TextView
        android:id="@+id/id_registrate_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/registrate"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>


</LinearLayout>